--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.3.6",
+    "axios": "^0.21.4",
     "next": "11.1.2",
     "postcss": "^8.3.8",
     "react": "17.0.2",
