--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "autoprefixer": "^10.3.6",
     "axios": "^0.21.4",
+    "dayjs": "^1.10.7",
     "next": "11.1.2",
     "postcss": "^8.3.8",
     "react": "17.0.2",
